fix: fix border dark mode

--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -10,6 +10,7 @@
   --animate-fade-in-left: fade-in-left 0.3s ease-out;
   --shadow-profile: 0px 4px 4px rgba(0, 0, 0, 0.25);
   --color-main: #b7a261;
+  --color-dark: #4b3d10;
   @keyframes zoom-in {
     0% {
       opacity: 0;
